--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ uvicorn==0.30.3
 pydantic==2.8.2
 nest-asyncio==1.6.0
 huggingface-hub==0.23.5
+dlib==19.24.4
+matplotlib==3.7.1
+scipy==1.11.4
+numpy==1.25.2
+torch==2.3.1
